fix gap between widget and widget-header

--- a/react/indecision-app/src/sass/components/_widget.scss
+++ b/react/indecision-app/src/sass/components/_widget.scss
@@ -1,5 +1,7 @@
 .widget {
     background: $light-blue;
+    display: inline-block;
+    width: 100%;
 }
 
 
